--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,11 +6,9 @@
     tools:context=".Fragments.Cart"
     >
 
-
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        />
+        android:id="@+id/recycler_cart"/>
 
 </FrameLayout>
