--- a/app/src/main/res/layout/activity_main_server.xml
+++ b/app/src/main/res/layout/activity_main_server.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderHistory.OrderHistory"
+    tools:context=".Server.MainServer"
     >
 
 </android.support.constraint.ConstraintLayout>
